Modified footer and mobile footer
*added shre-button in mobile footer
*added flex-wrap for icon and locations on footer

--- a/_includes/mobi-footer.html
+++ b/_includes/mobi-footer.html
@@ -1,54 +1,78 @@
 <div class="mobile-nav-container">
+    <div class="overlay"></div>
     <nav class="mobile-nav">
-        <ul>
+        <ul class="mob-nav-links">
             <li>
                 <a href="{{ site.baseurl }}/latest/ " class="end-mark-container">
                     <span class="sr-only">back to home</span>
-                    <!-- <svg class="aaf28 icon-latest _208ca quartz" width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" data-darkreader-inline-fill="" style="--darkreader-inline-fill:none;"><path d="M.5 0h20v20H.5z"></path><g fill="#000" data-darkreader-inline-fill="" style="--darkreader-inline-fill:#000000;"><path d="M10 2.5c-4.134 0-7.5 3.366-7.5 7.5s3.366 7.5 7.5 7.5 7.5-3.366 7.5-7.5-3.366-7.5-7.5-7.5zm0-2c5.238 0 9.5 4.262 9.5 9.5s-4.262 9.5-9.5 9.5S.5 15.238.5 10 4.762.5 10 .5z" fill-rule="nonzero" fill="var(--color,#000)"></path><path d="M10.878 9.778H12.6a1 1 0 0 1 1 1v.055a1 1 0 0 1-1 1H9.822a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h.056a1 1 0 0 1 1 1v3.778z" fill="var(--color,#000)"></path></g></g></svg> -->
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="30.932" height="39.035" viewBox="0 0 30.932 39.035">
-                        <g id="asset_8" data-name="asset 8" transform="translate(1 1)">
-                          <ellipse id="Ellipse_12" data-name="Ellipse 12" cx="1.936" cy="2.478" rx="1.936" ry="2.478" transform="translate(12.53 16.04)" fill="none" stroke="#000" stroke-width="2"/>
-                          <ellipse id="Ellipse_13" data-name="Ellipse 13" cx="14.466" cy="18.518" rx="14.466" ry="18.518" fill="none" stroke="#000" stroke-width="2"/>
-                        </g>
-                      </svg> -->
-                      <svg class="aaf28 icon-latest quartz" width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M.5 0h20v20H.5z"></path><g fill="#000"><path d="M10 2.5c-4.134 0-7.5 3.366-7.5 7.5s3.366 7.5 7.5 7.5 7.5-3.366 7.5-7.5-3.366-7.5-7.5-7.5zm0-2c5.238 0 9.5 4.262 9.5 9.5s-4.262 9.5-9.5 9.5S.5 15.238.5 10 4.762.5 10 .5z" fill-rule="nonzero" fill="var(--color,#000)"></path><path d="M10.878 9.778H12.6a1 1 0 0 1 1 1v.055a1 1 0 0 1-1 1H9.822a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h.056a1 1 0 0 1 1 1v3.778z" fill="var(--color,#000)"></path></g></g></svg>
+                      <svg class="aaf28 icon-latest" width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><g fill="var(--color,#000)"><path d="M10 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S0 15.523 0 10 4.477 0 10 0z"></path><path d="M6 8.5a1.5 1.5 0 0 1 0 3 1.5 1.5 0 0 1 0-3zM10 8.5a1.5 1.5 0 0 1 0 3 1.5 1.5 0 0 1 0-3zM14 8.5a1.5 1.5 0 0 1 0 3 1.5 1.5 0 0 1 0-3z"></path></g></svg>
                     <span>Latest</span>
                 </a>
                 
             </li>
             <li>
-                <button href="{{ site.baseurl }}/video-gallery/ ">
-                    <span class="sr-only">Toggle share</span>
-                    
-                    <svg class="aaf28 icon-members quartz" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="var(--color,#000)"><path fill-rule="evenodd" d="M9.994 2.5l2.5 5 5 2.5-5 2.5-2.5 5-2.5-5-5-2.5 5-2.5 2.5-5zm0-2.5a2.5 2.5 0 0 0-2.237 1.381l-2.125 4.25-4.25 2.125a2.5 2.5 0 0 0 0 4.473l4.25 2.125 2.125 4.25a2.5 2.5 0 0 0 4.473 0l2.125-4.25 4.25-2.125a2.5 2.5 0 0 0 0-4.473l-4.25-2.125-2.125-4.25A2.5 2.5 0 0 0 9.994 0z"></path></svg>
-                    <span>Videos</span>
-                </button>
-                
+                <a href="{{ site.baseurl }}/tv/ " class="end-mark-container">
+                    <button href="{{ site.baseurl }}/video-gallery/ ">
+                        <span class="sr-only">Toggle share</span>
+                        
+                        <svg class="aaf28 icon-members quartz" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="var(--color,#000)"><path fill-rule="evenodd" d="M9.994 2.5l2.5 5 5 2.5-5 2.5-2.5 5-2.5-5-5-2.5 5-2.5 2.5-5zm0-2.5a2.5 2.5 0 0 0-2.237 1.381l-2.125 4.25-4.25 2.125a2.5 2.5 0 0 0 0 4.473l4.25 2.125 2.125 4.25a2.5 2.5 0 0 0 4.473 0l2.125-4.25 4.25-2.125a2.5 2.5 0 0 0 0-4.473l-4.25-2.125-2.125-4.25A2.5 2.5 0 0 0 9.994 0z"></path></svg>
+                        <span>Videos</span>
+                    </button>
+                </a>
             </li>
             <li>
-                <button href="{{ site.baseurl }}/video-gallery/ ">
-                    <span class="sr-only">Toggle share</span>
-                    <svg class="aaf28 icon-editions quartz" width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><g fill="var(--color,#000)"><path d="M10 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S0 15.523 0 10 4.477 0 10 0z"></path><path d="M6 8.5a1.5 1.5 0 0 1 0 3 1.5 1.5 0 0 1 0-3zM10 8.5a1.5 1.5 0 0 1 0 3 1.5 1.5 0 0 1 0-3zM14 8.5a1.5 1.5 0 0 1 0 3 1.5 1.5 0 0 1 0-3z"></path></g></svg>
-                    <span>Gallery</span>
-                </button>
-                
+                <a href="{{ site.baseurl }}/photo-gallery/ " class="end-mark-container">
+                    <button href="{{ site.baseurl }}/video-gallery/ ">
+                        <span class="sr-only">Toggle share</span>
+                        <svg id="asset_33" class="gallery-svg"    data-name="asset 33" xmlns="http://www.w3.org/2000/svg" width="15.624" height="20" viewBox="0 0 15.624 20">
+                            <path id="Path_58" data-name="Path 58" d="M0,0H15.624V20H0Z" fill="none" fill-rule="evenodd" style="fill: none !important;"/>
+                            <g id="Group_64" data-name="Group 64" transform="translate(0.547 0.7)">
+                            <path id="Path_59" data-name="Path 59" d="M10.856,12.894a.911.911,0,0,0-.781,1v2.5a.911.911,0,0,0,.781,1h1.953a.911.911,0,0,0,.781-1v-2.5a.911.911,0,0,0-.781-1H10.856Zm0-2h1.953c1.294,0,2.344,1.343,2.344,3v2.5c0,1.657-1.049,3-2.344,3H10.856c-1.294,0-2.344-1.343-2.344-3v-2.5c0-1.657,1.049-3,2.344-3Zm-7.812,2a.911.911,0,0,0-.781,1v2.5a.911.911,0,0,0,.781,1H5a.911.911,0,0,0,.781-1v-2.5a.911.911,0,0,0-.781-1H3.044Zm0-2H5c1.294,0,2.344,1.343,2.344,3v2.5c0,1.657-1.049,3-2.344,3H3.044c-1.294,0-2.344-1.343-2.344-3v-2.5c0-1.657,1.049-3,2.344-3Zm0-8.194a.911.911,0,0,0-.781,1V6.2a.911.911,0,0,0,.781,1H5a.911.911,0,0,0,.781-1V3.7A.911.911,0,0,0,5,2.7Zm0-2H5C6.291.7,7.34,2.043,7.34,3.7V6.2c0,1.657-1.049,3-2.344,3H3.044C1.749,9.2.7,7.857.7,6.2V3.7c0-1.657,1.049-3,2.344-3Zm7.812,2a.911.911,0,0,0-.781,1V6.2a.911.911,0,0,0,.781,1h1.953a.911.911,0,0,0,.781-1V3.7a.911.911,0,0,0-.781-1H10.856Zm0-2h1.953c1.294,0,2.344,1.343,2.344,3V6.2c0,1.657-1.049,3-2.344,3H10.856c-1.294,0-2.344-1.343-2.344-3V3.7c0-1.657,1.049-3,2.344-3Z" transform="translate(-0.7 -0.7)"/>
+                            </g>
+                        </svg>
+                        
+                        <span>Gallery</span>
+                    </button>
+                </a>
             </li>
+
             <li>
-                <button href="{{ site.baseurl }}/video-gallery/ ">
-                    <span class="sr-only">Toggle share</span>
-                    <svg class="aaf28 icon-emails quartz" width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.756 3.92C15.426.86 11.628-.575 7.938.213c-4.853.894-8.212 5.53-7.683 10.61.529 5.08 4.763 8.866 9.698 8.669a9.614 9.614 0 0 0 4.267-.99.964.964 0 0 0 .513-.726.995.995 0 0 0-.293-.86.965.965 0 0 0-1.096-.207c-1.418.69-3 .932-4.544.7-3.983-.492-6.879-4.145-6.568-8.277.311-4.133 3.72-7.28 7.72-7.127a7.674 7.674 0 0 1 4.65 1.56 7.598 7.598 0 0 1 2.068 2.323 7.665 7.665 0 0 1 1.035 3.868c-.025.832-.688 1.497-1.5 1.497-.813 0-1.476-.665-1.502-1.502-.022-1.904-1.14-3.608-2.84-4.333a4.718 4.718 0 0 0-3.32-.212c-1.611.551-2.8 1.98-3.087 3.716-.289 1.738.372 3.498 1.715 4.576a4.463 4.463 0 0 0 4.698.578 4.482 4.482 0 0 0 1.878-1.49l.15-.205.202.153c.61.461 1.346.71 2.108.71.07.002.141-.001.227-.011 1.666-.09 3.035-1.4 3.254-3.086 0-.058.001-.102.006-.208a3.88 3.88 0 0 0 0-.383 9.665 9.665 0 0 0-1.938-5.636zm-7.797 8.578a2.646 2.646 0 0 1-2.38-1.35 2.825 2.825 0 0 1 0-2.794c.494-.865 1.406-1.383 2.369-1.351.185-.002.37.016.541.054 1.276.222 2.206 1.362 2.206 2.694 0 1.33-.928 2.468-2.2 2.693-.18.038-.364.057-.536.054z" fill-rule="nonzero" fill="var(--color,#000)"></path></svg>
-                    <span>Subscribe</span>
-                </button>
-                
-            </li>
-            <li>
-                <button href="{{ site.baseurl }}/video-gallery/ ">
+                <button class="open-btn share-btn-show" href="{{ site.baseurl }}/video-gallery/ ">
                     <span class="sr-only">Toggle share</span>
                     <svg class="share-button" x="0px" y="0px" viewBox="0 0 22.9 20.6"><path class="share-mark mark" d="M15.8,18.1H4C4.4,11.9,9.5,7,15.8,7c0.4,0,0.7-0.3,0.7-0.8s-0.3-0.8-0.7-0.8c-6.1,0-11.3,4.2-12.9,9.8V6.2c0-0.4-0.3-0.8-0.8-0.8S1.4,5.8,1.4,6.2v12.6c0,0.4,0.3,0.8,0.8,0.8h13.6c0.4,0,0.7-0.3,0.7-0.8S16.2,18.1,15.8,18.1z M21.2,5.7l-4.5-4.5c-0.3-0.3-0.8-0.3-1.1,0s-0.3,0.8,0,1.1l4,4l-4,4c-0.3,0.3-0.3,0.8,0,1.1c0.1,0.1,0.3,0.2,0.5,0.2c0.2,0,0.4-0.1,0.5-0.2l4.5-4.5C21.5,6.4,21.5,6,21.2,5.7z"></path></svg>
-                    <span>Share</span>
+                    <span style="margin-top: .6em;">Share</span>
+                </button>
+                <button class="close-btn">
+                    <svg class="close" viewBox="0 0 21.3 19.5" style="width: 2rem;"><g><path d="M17.8,3.7L4.6,16.9c-0.3,0.3-0.8,0.3-1.1,0c-0.3-0.3-0.3-0.8,0-1.1L16.7,2.6c0.3-0.3,0.8-0.3,1.1,0C18.1,2.9,18.1,3.4,17.8,3.7z"></path><path d="M16.7,16.9L3.5,3.7c-0.3-0.3-0.3-0.8,0-1.1s0.8-0.3,1.1,0l13.2,13.2c0.3,0.3,0.3,0.8,0,1.1C17.5,17.2,17,17.2,16.7,16.9z"></path></g></svg></button>
+                <ul class="social-submenu">
+                    
+                        <li class="submenu-links"><a href="https://www.instagram.com/np-live/" target="_blank" rel="noopener noreferrer"><span class="sr-only">Follow Nwangele Post on Instagram</span><svg x="0px" y="0px" viewBox="0 0 41 41"><circle class="ring" fill="none" stroke-miterlimit="10" cx="20.5" cy="20.5" r="20"></circle><path class="instagram-mark mark" d="M26.1,13.1H14.9c-1,0-1.9,0.8-1.9,1.9v11.3c0,1,0.8,1.9,1.9,1.9h11.1c1,0,1.9-0.8,1.9-1.9V15C27.9,13.9,27.1,13.1,26.1,13.1z M23.6,20.6c0,1.7-1.4,3.1-3.1,3.1c-1.7,0-3.1-1.4-3.1-3.1c0-0.5,0.1-1,0.3-1.4c0.5-1,1.5-1.7,2.7-1.7c1.2,0,2.2,0.7,2.7,1.7C23.4,19.6,23.6,20.1,23.6,20.6z M26.3,25.7c0,0.4-0.3,0.8-0.8,0.8h-9.9c-0.4,0-0.8-0.3-0.8-0.8v-6.5h1.3c-0.1,0.4-0.2,0.9-0.2,1.4c0,2.6,2.1,4.6,4.6,4.6c2.6,0,4.6-2.1,4.6-4.6c0-0.5-0.1-1-0.2-1.4h1.3L26.3,25.7L26.3,25.7z M26.3,16.8c0,0.4-0.3,0.8-0.8,0.8h-1.2c-0.4,0-0.8-0.3-0.8-0.8v-1.3c0-0.3,0.2-0.6,0.5-0.7h1.4c0.4,0,0.8,0.3,0.8,0.8L26.3,16.8L26.3,16.8z"></path></svg></a></li>
+                        <li class="submenu-links"><a href="http://facebook.com/nwangele-post" target="_blank" rel="noopener noreferrer"><span class="sr-only">Follow Nwangele Post on Facebook</span><svg x="0px" y="0px" viewBox="0 0 41 41"><circle class="ring" fill="none" stroke-miterlimit="10" cx="20.5" cy="20.5" r="20"></circle><path class="fb-mark mark" fill-rule="evenodd" clip-rule="evenodd" d="M24,13c0,0.9,0,2.4,0,2.4s-1.8-0.2-2.2,0.5c-0.2,0.4-0.1,1.5-0.1,2.2c0.8,0,1.6,0,2.4,0c-0.2,0.9-0.3,1.5-0.5,2.3c-0.7,0-1.9,0-1.9,0V28c0,0-2.2,0-3.3,0c0-2.3,0-5,0-7.5c-0.5,0-0.9,0-1.4,0c0-0.9,0-1.5,0-2.4c0.5,0,0.9,0,1.4,0c0.1-1.7,0.1-3.4,1-4.3C20.3,12.9,21.2,13,24,13z"></path></svg></a></li>
+                        <li class="submenu-links"><a href="http://twitter.com/np" target="_blank" rel="noopener noreferrer"><span class="sr-only">Follow Nwangele Post on Twitter</span><svg class="twitter-button" x="0px" y="0px" viewBox="0 0 41 41"><circle class="ring" fill="none" stroke-miterlimit="10" cx="20.5" cy="20.5" r="20"></circle><path class="twitter-mark mark" fill-rule="evenodd" clip-rule="evenodd" d="M23.8,14.6c1.2,0,1.8,0.4,2.4,1c0.5,0,1.2-0.3,1.6-0.5c0.1-0.1,0.3-0.1,0.4-0.2c-0.2,0.6-0.5,1.1-1,1.4c-0.1,0.1-0.2,0.2-0.3,0.2c0,0,0,0,0,0c0.7,0,1.2-0.3,1.7-0.5c0,0,0,0,0,0c-0.3,0.4-0.6,0.9-1,1.2c-0.2,0.1-0.3,0.3-0.5,0.4c0,0.7,0,1.4-0.1,1.9c-0.8,3.4-2.8,5.7-5.9,6.7c-1.1,0.4-3,0.5-4.3,0.2c-0.6-0.2-1.2-0.3-1.8-0.6c-0.3-0.1-0.6-0.3-0.9-0.4c-0.1-0.1-0.2-0.1-0.3-0.2c0.3,0,0.6,0.1,1,0c0.3,0,0.6,0,0.9-0.1c0.7-0.2,1.3-0.3,1.8-0.7c0.3-0.1,0.6-0.3,0.8-0.5c-0.3,0-0.6-0.1-0.9-0.2c-1-0.3-1.6-1-1.9-1.9c0.3,0,1.2,0.1,1.4-0.1c-0.4,0-0.7-0.2-1-0.4c-0.8-0.5-1.4-1.3-1.4-2.6c0.1,0,0.2,0.1,0.3,0.1c0.2,0.1,0.4,0.1,0.6,0.2c0.1,0,0.3,0.1,0.4,0c0,0,0,0,0,0c-0.2-0.2-0.4-0.3-0.6-0.5c-0.5-0.6-1-1.6-0.7-2.8c0.1-0.3,0.2-0.6,0.3-0.8c0,0,0,0,0,0c0.1,0.1,0.2,0.2,0.3,0.3c0.3,0.3,0.6,0.6,0.9,0.9c1.1,0.9,2.1,1.4,3.7,1.8c0.4,0.1,0.9,0.2,1.4,0.2c-0.1-0.4-0.1-1,0-1.4c0.3-1,0.9-1.7,1.7-2c0.2-0.1,0.4-0.2,0.7-0.2C23.5,14.6,23.7,14.6,23.8,14.6z"></path></svg></a></li>                 
+                    
+                        <!-- <li class="submenu-links"><a href="mailto:?subject=Quartz%3A%20Italy%20convinced%20people%20to%20stay%20home.%20Now%20it%20needs%20to%20help%20them%20cope&body={{ site.url }}{{ page.title }}"  target="_blank" rel="noopener noreferrer">
+                            <span class="sr-only">Share via mail</span>
+                            <svg width="20" height="20" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M18.75 0C19.44 0 20 .56 20 1.25v1.194l-10 10-10-10V1.25C0 .56.559 0 1.25 0h17.5zM20 15.125l-5.015-5.015L20 5.096v10.029zm-9.338-.693l2.998-2.996 6.34 6.34v.974c0 .691-.56 1.25-1.25 1.25H1.25A1.25 1.25 0 0 1 0 18.75v-.974l6.34-6.341 2.996 2.997v.002a.94.94 0 0 0 1.326-.002zM0 5.096l5.015 5.014L0 15.125V5.096z" fill-rule="evenodd" fill="var(--color,#000)"></path></svg>
+                            </a>
+                        </li>
+                        <li class="submenu-links"><a href="https://www.facebook.com/sharer/sharer.php?u={{site.url}}{{page.url}}" target="_blank" rel="noopener noreferrer"><span class="sr-only">Share on Facebook</span><svg x="0px" y="0px" viewBox="0 0 41 41"><circle class="ring" fill="none" stroke-miterlimit="10" cx="20.5" cy="20.5" r="20"></circle><path class="fb-mark mark" fill-rule="evenodd" clip-rule="evenodd" d="M24,13c0,0.9,0,2.4,0,2.4s-1.8-0.2-2.2,0.5c-0.2,0.4-0.1,1.5-0.1,2.2c0.8,0,1.6,0,2.4,0c-0.2,0.9-0.3,1.5-0.5,2.3c-0.7,0-1.9,0-1.9,0V28c0,0-2.2,0-3.3,0c0-2.3,0-5,0-7.5c-0.5,0-0.9,0-1.4,0c0-0.9,0-1.5,0-2.4c0.5,0,0.9,0,1.4,0c0.1-1.7,0.1-3.4,1-4.3C20.3,12.9,21.2,13,24,13z"></path></svg></a></li>
+                        <li class="submenu-links"><a href="https://twitter.com/intent/tweet?text=&url={{site.url}}{{page.url}}" target="_blank" rel="noopener noreferrer"><span class="sr-only">Share on Twitter</span><svg class="twitter-button" x="0px" y="0px" viewBox="0 0 41 41"><circle class="ring" fill="none" stroke-miterlimit="10" cx="20.5" cy="20.5" r="20"></circle><path class="twitter-mark mark" fill-rule="evenodd" clip-rule="evenodd" d="M23.8,14.6c1.2,0,1.8,0.4,2.4,1c0.5,0,1.2-0.3,1.6-0.5c0.1-0.1,0.3-0.1,0.4-0.2c-0.2,0.6-0.5,1.1-1,1.4c-0.1,0.1-0.2,0.2-0.3,0.2c0,0,0,0,0,0c0.7,0,1.2-0.3,1.7-0.5c0,0,0,0,0,0c-0.3,0.4-0.6,0.9-1,1.2c-0.2,0.1-0.3,0.3-0.5,0.4c0,0.7,0,1.4-0.1,1.9c-0.8,3.4-2.8,5.7-5.9,6.7c-1.1,0.4-3,0.5-4.3,0.2c-0.6-0.2-1.2-0.3-1.8-0.6c-0.3-0.1-0.6-0.3-0.9-0.4c-0.1-0.1-0.2-0.1-0.3-0.2c0.3,0,0.6,0.1,1,0c0.3,0,0.6,0,0.9-0.1c0.7-0.2,1.3-0.3,1.8-0.7c0.3-0.1,0.6-0.3,0.8-0.5c-0.3,0-0.6-0.1-0.9-0.2c-1-0.3-1.6-1-1.9-1.9c0.3,0,1.2,0.1,1.4-0.1c-0.4,0-0.7-0.2-1-0.4c-0.8-0.5-1.4-1.3-1.4-2.6c0.1,0,0.2,0.1,0.3,0.1c0.2,0.1,0.4,0.1,0.6,0.2c0.1,0,0.3,0.1,0.4,0c0,0,0,0,0,0c-0.2-0.2-0.4-0.3-0.6-0.5c-0.5-0.6-1-1.6-0.7-2.8c0.1-0.3,0.2-0.6,0.3-0.8c0,0,0,0,0,0c0.1,0.1,0.2,0.2,0.3,0.3c0.3,0.3,0.6,0.6,0.9,0.9c1.1,0.9,2.1,1.4,3.7,1.8c0.4,0.1,0.9,0.2,1.4,0.2c-0.1-0.4-0.1-1,0-1.4c0.3-1,0.9-1.7,1.7-2c0.2-0.1,0.4-0.2,0.7-0.2C23.5,14.6,23.7,14.6,23.8,14.6z"></path></svg></a></li>                 
+                    -->
+                </ul>
+            </li> 
+            
+            <li>
+                <button class="mobile-menu" href="{{ site.baseurl }}/video-gallery/ ">
+                    <span class="sr-only">Toggle share</span>
+                    <span class="icon-span">
+                        <svg class="_6e0d2 menu-icon" xmlns="http://www.w3.org/2000/svg" width="22" height="15" viewBox="0 0 12 12"> <style>.hamburger-icon__bottom,.hamburger-icon__middle,.hamburger-icon__top{fill:var(--color,#707070);transform-origin:50%;transition:all .3s}.open .hamburger-icon__top{transform:translateY(3px) translateX(-25%) rotate(45deg)}.open .hamburger-icon__bottom{transform:translateY(-4px) translateX(-25%) rotate(-45deg)}.open .hamburger-icon__middle{transform:translatex(-100%);opacity:0}</style> <path class="hamburger-icon__top" d="M0 0h12v2H0z"></path> <path class="hamburger-icon__middle" d="M0 5h12v2H0z"></path> <path class="hamburger-icon__bottom" d="M0 10h12v2H0z"></path> </svg>
+                                           
+                    </span>
+ <!-- <svg class="menu-icon" x="0px" y="0px" viewBox="0 0 21.3 19.5"><style>.hamburger-icon__bottom,.hamburger-icon__middle,.hamburger-icon__top{fill:var(--color,#707070);transform-origin:50%;transition:all .3s}.open .hamburger-icon__top{transform:translateY(3px) translateX(-25%) rotate(45deg)}.open .hamburger-icon__bottom{transform:translateY(-4px) translateX(-25%) rotate(-45deg)}.open .hamburger-icon__middle{transform:translatex(-100%);opacity:0}</style><g><path d="M20,10.6H1.3c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8H20c0.4,0,0.8,0.3,0.8,0.8S20.4,10.6,20,10.6z"></path><path d="M20,18.9H1.3c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8H20c0.4,0,0.8,0.3,0.8,0.8S20.4,18.9,20,18.9z"></path><path d="M20,2.2H1.3c-0.4,0-0.8-0.3-0.8-0.8s0.3-0.8,0.8-0.8H20c0.4,0,0.8,0.3,0.8,0.8S20.4,2.2,20,2.2z"></path></g></svg> -->
+                    <span>Menu</span>
                 </button>
                 
-            </li>                
+            </li>
         </ul>
 
     </nav>
