--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -32,6 +32,8 @@
         li{
             margin: 0 2em;
             display: inline-flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
 
         a{
@@ -67,10 +69,14 @@
     & .social-buttons{
         display: flex;
         margin-bottom: 40px;
-        max-width: 459px;
+        // max-width: 459px;
         margin: 0 auto;
         justify-content: center;
+        flex-wrap: wrap;
 
+        @media(max-width: 750px){
+            margin-left: -5%;
+        }
         & li{
             margin-bottom: 0 .6rem;
 
@@ -116,6 +122,10 @@
             font-size: 20px;
             text-align: center;
             line-height: 1.25;
+
+            @media (max-width: 750px){
+                margin-bottom: 1em;
+            }
 
             & span{
                 display: none;
@@ -167,3 +177,26 @@
 .terms .row {
     margin-top: 2em;
 }
+
+
+//Repairs
+.site-footer {
+    color: white;
+}
+.terms {
+    color: white;
+}
+.site-footer .social-buttons li a svg path {
+    fill: white !important;
+}
+
+
+.site-footer .social-buttons li a:hover .ring{
+    stroke: #5e5e5e;
+    // stroke: $color-accent;
+}
+// .site-footer .social-buttons li a svg .ring{
+//     stroke: #2b2b2b;
+//     -webkit-transition: stroke .125s ease-in-out;
+//     transition: stroke .125s ease-in-out;
+// }
