--- a/_sass/mobile-nav.scss
+++ b/_sass/mobile-nav.scss
@@ -14,11 +14,11 @@
         height: 3rem;
         padding-top: .3em;
 
-        & ul{
+        & .mob-nav-links{
             display: flex;
             justify-content: space-between;
 
-            & li{
+            & > li{
                 width: 20%;
                 -webkit-box-orient: vertical;
                 -webkit-box-direction: normal;
@@ -26,6 +26,7 @@
                 justify-content: center;
                 text-align: center;
                 flex-direction: column;
+                position: relative;
                 // display: flex;
                 // flex-flow: column;
                 // justify-content: center;align-items: center;
@@ -76,4 +77,58 @@
     & svg{
         height: 24px !important;
     }
+}
+
+
+//Share Buttons
+.mobile-nav .social-submenu {
+    -webkit-transition: opacity .35s ease-in-out,-webkit-transform .3s ease-in-out;
+    transition: opacity .35s ease-in-out,-webkit-transform .3s ease-in-out;
+    transition: opacity .35s ease-in-out,transform .3s ease-in-out;
+    transition: opacity .35s ease-in-out,transform .3s ease-in-out,-webkit-transform .3s ease-in-out;
+    position: absolute;
+    left: 0;
+    bottom: 3rem;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    border: 1px solid #eee;
+    border-bottom: 0;
+    opacity: 0;
+    -webkit-transform: translateY(10px);
+    transform: translateY(10px);
+    visibility: hidden;
+    background-color: var(--clr-bg-1);
+
+    
+    li {
+        all: unset !important;
+    }
+}
+.mobile-nav .open{
+    height: auto;
+    visibility: visible;
+    opacity: 1;
+
+}
+.mobile-nav .transition-in{
+    opacity: 1;
+    transform: translateY(-1px);
+}
+.submenu-links svg{
+    width: 4rem;
+}
+.close-btn{
+    margin-top: .2em;
+}
+.with-submenu .close-btn{
+    margin-top: -.1em;
+}
+.mobile-menu .menu-icon{
+    margin-top: .3em;
+    margin-bottom: .2em;
+}
+.mob-nav-links .icon-latest{
+    margin-top: .15em;
+    margin-bottom: .05em;
 }
