--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -2,7 +2,7 @@ header{
     border-bottom: 1px solid $background-border-decor--lite;
     @include border(1px, solid, #{$background-border-decor-string}, -bottom);
     // overflow: hidden;
-    position: fixed;
+    position: relative;
     width: 100%;
     height: 4em;
     background: $background-nav--lite;
@@ -13,6 +13,9 @@ header{
     @media #{$lg-scn} {
         padding-top: .1em;
         height: 6em;
+    }
+    @media (max-width: 1039px){
+        position: fixed;
     }
 
     .hide{
@@ -133,13 +136,20 @@ header{
         @include bg-color(#{$background-nav-string});
         transition: transform .3s;
         backface-visibility: hidden;
-        padding-top: 1em;
-        height: 6em;
+        padding-top: 2em;
         width: 100%;
 
         @media #{$lg-scn--dn} {
             display: none;
         }
+        @media (max-width: 1039px){
+            display: none;
+        }
+    
+}
+.nav-container.nav-container--standard.nav-container--fixed {
+    margin-top: -.5em;
+    @include border(1px, solid, #{$background-border-decor-string}, -bottom);
 }
 .nav-container--fixed{
     position: fixed;
@@ -179,4 +189,15 @@ header{
 }
 .primary-subscribe-cell{
     margin: auto;
+}
+
+
+//repairs
+.menu-button .ham-menu{
+    // @media #{$md-scn--dn}{
+    //     display: none;
+    // }
+    @media (max-width: 767px){
+        display: none;
+    }  
 }
