--- a/_sass/side-menu.scss
+++ b/_sass/side-menu.scss
@@ -12,6 +12,9 @@
     @include border(1px, solid, #{$background-border-decor-string}, -right);
     padding: 1em;
     overflow-y: scroll;
+    @media (max-width: 1038px) and (min-width: 767px){
+        width: 50vw;
+    }
     @media #{$lg-scn} {
         height: calc(100vh - 95px);
         top: 95px;
@@ -197,11 +200,21 @@
     background-image: initial;
     pointer-events: auto;
 }
-
+.menu-button .overlay.pointer-off{
+    pointer-events: auto;
+    background-color: $background-3--lite;
+}
 .darkmode .item-link{
     color: $color-nav-link  !important;
 }
 
 .darkmode .item-link:hover{
     color: $color-accent !important;
+}
+
+.slide-down--nav .slide-down--{
+    @media #{$lg-scn} {
+        height: calc(100vh - 70px);
+        top: 70px;
+    }
 }
